k8s/test-nginx-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: test-nginx
  namespace: ninaivalaigal
  labels:
    app: test-nginx
spec:
  selector:
    app: test-nginx
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
